Fixed direct messaging bug